--- a/site1/index.html
+++ b/site1/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Votação</title>
-        <link href="css.css" rel="stylesheet">
+        <link href="https://rotfuchs-von-vulpes.github.io/sites/style.css" rel="stylesheet">
         
     </head>
     <body>
