Mudança de arquitetura, NPC inimigo

--- a/site2/index.html
+++ b/site2/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
+<html lang="en">
+
+</html>
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Du bist eine Fuchs!</title>
-    <link href="https://rotfuchs-von-vulpes.github.io/sites/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
     <img id="fox" src="sprites/foxface" alt="The Scream" width="0" height="0">
     <img id="wolf" src="sprites/wolfface.png" alt="The Scream" width="0" height="0">
     <img id="purply" src="sprites/purplybarry.png" alt="The Scream" width="0" height="0">
 </head>
+
 <body>
-    <canvas id=canvas width="750" height="500" ></canvas>
+    <canvas id=canvas width="750" height="500"></canvas>
     <script src=script.js></script>
     <p id="x">0</p>
     <p id="y">0</p>
     <p id="p">0</p>
     <p id="m">0</p>
     <p id="s">0</p>
+    <p id="debug">0</p>
 </body>
+
+<footer>
+    <p> Rotfuchs-von-Vulpes </p>
+    <p> marcusmmmz </p>
+</footer>
