--- a/site2/index.html
+++ b/site2/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Du bist eine Fuchs!</title>
-    <link href="/style.css" rel="stylesheet">
+    <link href="https://rotfuchs-von-vulpes.github.io/sites/style.css" rel="stylesheet">
     <img id="fox" src="sprites/foxface" alt="The Scream" width="0" height="0">
     <img id="wolf" src="sprites/wolfface.png" alt="The Scream" width="0" height="0">
     <img id="purply" src="sprites/purplybarry.png" alt="The Scream" width="0" height="0">
