--- a/site2/index.html
+++ b/site2/index.html
@@ -15,13 +15,14 @@
 
 <body>
     <canvas id=canvas width="750" height="500"></canvas>
-    <script src=script.js></script>
     <p id="x">0</p>
     <p id="y">0</p>
     <p id="p">0</p>
     <p id="m">0</p>
     <p id="s">0</p>
     <p id="debug">0</p>
+    <script src="TIC80.js"></script>
+    <script src=script.js></script>
 </body>
 
 <footer>
