--- a/site2/index.html
+++ b/site2/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <canvas id=canvas width="750" height="500"></canvas>
+    <canvas id=canvas width="750" height="500">
+    Seu navegador não suporta o canvas, que tal baixar um Browser que presta?
+    </canvas>
     <p id="x">0</p>
     <p id="y">0</p>
     <p id="p">0</p>
