--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>TIC TAC TOE</title>
     <meta charset="UTF-8"></meta>
-    <!--link rel="stylesheet" href="../styles.css"></link>-->
+    <!--link rel="stylesheet" href="../style.css"></link>-->
     <link rel="stylesheet" href="../styles.css"></link>
     <link rel="stylesheet" href="styles.css"></link>
 </head>
