--- a/perlin noise/index.html
+++ b/perlin noise/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="utf-8">
-        <title>Bolinhas</title>
+        <title>Perlin noise</title>
         <link rel="stylesheet" href="styles.css"></link>
     </head>
     <body>
-        <canvas id="lua" width="800" height="700"></canvas>
+        <canvas id="lua"></canvas>
         <script src="vulpes.js"></script>
         <script src="LUA.js"></script>
     </body>
