--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 		<li><a href="./tictactoe/">TicTacToe</a></li>
 		<li><a href="./rain/">Chuva</a></li>
 		<li><a href="./Mandelbrot/">Fractal Mandelbrot</a></li>
+		<li><a href="./Mandelbrot2/">Fractal Mandelbrot duplo</a></li>
 		<li><a href="./formigaDeLangton/">formiga De Langton</a></li>
 		<li><a href="./corvo/">Jogo corvo</a></li>
+		<li><a href="./julia/">Conjuntos julia</a></li>
 	</ul>
 </body>
 </html>
