--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<li><a href="./rain/">Chuva</a></li>
 		<li><a href="./Mandelbrot/">Fractal Mandelbrot</a></li>
 		<li><a href="./Mandelbrot2/">Fractal Mandelbrot duplo</a></li>
+		<li><a href="./Mandelbrot3/">Fractal Mandelbrot triplo</a></li>
+		<li><a href="./Mandelbrot4/">Fractal Mandelbrot quádruplo</a></li>
 		<li><a href="./formigaDeLangton/">formiga De Langton</a></li>
 		<li><a href="./corvo/">Jogo corvo</a></li>
 		<li><a href="./julia/">Conjuntos julia</a></li>
