--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+<head>
         <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Labirinto</title>
+	<title>Document</title>
         <link rel="stylesheet" href="styles.css"></link>
+	<style>
     </head>
-    <body>
-        <canvas id="lua"></canvas>
-        <script src="LUA.js"></script>
-    </body>
+		ul {
+			text-align: center;
+			list-style: none;
+		}
+		li {
+			margin: 10px
+		}
+	</style>
+</head>
+<body>
+	<ul>
+		<li><a href="./site1/">Votação</a></li>
+		<li><a href="./site2/">Du bist eine Fuchs!</a></li>
+		<li><a href="./site3/">Eventos do mouse</a></li>
+		<li><a href="./tictactoe/">TicTacToe</a></li>
+		<li><a href="./rain/">Chuva</a></li>
+		<li><a href="./Mandelbrot/">Fractal Mandelbrot</a></li>
+		<li><a href="./Mandelbrot2/">Fractal Mandelbrot duplo</a></li>
+		<li><a href="./Mandelbrot3/">Fractal Mandelbrot triplo</a></li>
+		<li><a href="./Mandelbrot4/">Fractal Mandelbrot quádruplo</a></li>
+		<li><a href="./formigaDeLangton/">formiga De Langton</a></li>
+		<li><a href="./corvo/">Jogo corvo</a></li>
+		<li><a href="./julia/">Conjuntos julia</a></li>
+	</ul>
+</body>
 </html>
