--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<li><a href="./formigaDeLangton/">formiga De Langton</a></li>
 		<li><a href="./corvo/">Jogo corvo</a></li>
 		<li><a href="./julia/">Conjuntos julia</a></li>
+		<li><a href="./maze/">Gerador de labirintos</a></li>
 	</ul>
 </body>
 </html>
