--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<li><a href="./corvo/">Jogo corvo</a></li>
 		<li><a href="./julia/">Conjuntos julia</a></li>
 		<li><a href="./maze/">Gerador de labirintos</a></li>
+		<li><a href="./maze2/">Gerador de labirintos, só que com cor e instantaneo</a></li>
 	</ul>
 </body>
 </html>
